Complete JVM fundamentals guide with GC, classloading, and troubleshooting